# bitlet

./: .dockerignore  README.md
.github/workflows/: deploy.yml
bitlet-backend/: Cargo.toml  Dockerfile  fly.toml
bitlet-backend/src/: main.rs  tests.rs
bitlet-frontend/: index.html  package.json  pnpm-lock.yaml
bitlet-frontend/src/: App.tsx  List.tsx  index.css  main.tsx
bitlet-frontend/src/components/: Navbar.tsx
