[package]
name = "bitlet-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
redis = { version = "0.23", features = ["tokio-comp"] }
warp = "0.3"
dotenv = "0.15"
log = "0.4"
md5 = "0.7"  
env_logger = "0.10"

[dev-dependencies]
testcontainers = "0.11"
